# ropfec

./: .gitignore  BMAC_ROP_FEC_Mapping.docx  BOS-BMAC_Phase0_Impl_Status.txt  CITATION.cff  LICENSE  README.md  bmac_demo.py  pyproject.toml  requirements.txt  setup.py  setup_env.sh
bmac_engine/: __init__.py  benchmarks.py  bos_integration.py  fec_solver.py  multicell_agent.py  order_uncertainty.py  robust_extension.py  rop_polyhedron.py
bos_platform/: README.md  __init__.py  digital_twin.py  kalman.py  loader.py  opa.py  real_wiring_example.py  signal_control.py  temporal.py
case_studies/: selkov.py  test_selkov.py  test_wolf_heinrich.py  wolf_heinrich.py
docs/: BOS-BMAC_Phase0_Spec_v1.0.md  BOS-BMAC_Phase0_Spec_v1.0.tex
examples/: adapter_http_demo.py  bos_glue_example.py  correspondence_verification.py  end_to_end_toy.py  mock_bos_platform_core.py  numerical_toy_validation.py  phase1_digital_twin_robust_demo.py  run_all.py  run_mock_core_and_adapter_demo.py
experiments/: make_paper_figs.py  order_uq_demo.py
paper/: COVER_LETTER_B.md  cover_B.docx  make_docx.sh  make_docx_softwarex.sh  make_softwarex_figs.py  numeric.csl  refs.bib  reproduce.md  ropfec.docx  ropfec.tex  ropfec_docx.tex  softwarex.docx  softwarex.tex  softwarex_docx.tex
scripts/: archive_desktop_snapshots.sh  setup_bos_platform_path.sh
tests/: __init__.py  test_benchmarks.py  test_bmac_adapter.py  test_bos_platform_loader.py  test_fec_numerical_stability.py  test_fec_toy_glycolysis.py  test_integration_wiring.py  test_multicell_agent.py  test_order_uncertainty.py  test_robust_extension.py  (+1 more)
(+14 files in other folders)
