[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bmac-engine"
version = "0.1.0"
description = "Phase 0 implementation of BOS-BMAC (ROP/FEC mapping to BOS) per v1.0 spec."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
full = ["casadi>=3.6", "matplotlib"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]